--- a/man/icesh.pod
+++ b/man/icesh.pod
@@ -727,7 +727,7 @@ Where C<selection> is a sequence of selection and filtering options,
 which evaluates to B<true> when it is non-empty. That is, if one or more
 windows fulfilled the condition. If it is empty, then its C<actions>
 clause is ignored and the subsequent C<elif> or C<else> clause is tried
-or taken. Each clause is optional. Even the C<then> clause may be omitted.
+or taken. Each clause is optional.
 
 Whenever a selection condition evaluates to B<false>, the window selection
 that existed before the C<if> clause is immediately restored.  This also
@@ -882,7 +882,7 @@ which has a WM_ROLE value of C<special>, or start it with B<runonce>.
 
     icesh sync if -c roxterm.Roxterm -R special then \
         if -v then hide \
-        elif -u then setWorkspace this sync activate \
+        elif -u then setWorkspace this sync activate end \
         else runonce roxterm --role=special
 
 =head1 ENVIRONMENT
