--- a/man/icesh.pod
+++ b/man/icesh.pod
@@ -573,6 +573,8 @@ Top, bottom, left, and right are indices of the I<icesh xinerama> command.
 
 Observe the selected windows and report any changes. This includes
 focus, visibility, position, size and all window properties.
+To monitor the protocol request messages that client applications
+send to icewm, spy on the root window.
 
 =back
 
