Document drag and drop.

--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -237,6 +237,7 @@ for only this session, double click, edit the name and hit Enter.
 When C<PagerShowPreview> is turned on, a small graphical window summary
 for each workspace is shown. They support drag-and-drop: dragging a
 Firefox tab to a workspace button changes the current workspace.
+Then releasing it moves that tab to a new window in that workspace.
 
 The I<Task Pane> consists of a list of wide buttons for each application
 which is running on the current workspace, or all workspaces if
@@ -440,6 +441,16 @@ to wait before a change of workspace occurs.
 To move an application window to a different workspace one can use a
 keyboard shortcut.  Another option is to select the I<Move To> submenu
 in the window menu of the window frame.
+
+=head2 DRAG AND DROP
+
+The task bar supports drag and drop operations. When a drag
+is in progress, the destination window can be activated by
+hovering the drag icon over the task button for that window.
+Alternatively, the current workspace can be changed by
+hovering the drag icon over the desired workspace button.
+When edge switching is enabled, the current workspace can
+also be changed by bringing the drag icon to the screen edge.
 
 =head2 ADDRESS BAR
 
