--- a/po/lv.po
+++ b/po/lv.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2021-12-04 23:19+0100\n"
 "PO-Revision-Date: 2005-06-12 12:59+0300\n"
 "Last-Translator: Kristaps Kaupe <kristaps.kaupe@inbox.lv>\n"
-"Language-Team: \n"
+"Language-Team: Latvian\n"
 "Language: lv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
