--- a/po/mk.po
+++ b/po/mk.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2021-12-04 23:19+0100\n"
 "PO-Revision-Date: 2006-01-26 23:29+0100\n"
 "Last-Translator: Bozidar Proevski <bobibobi@freemail.com.mk>\n"
-"Language-Team:  <mk@li.org>\n"
+"Language-Team: Macedonian <mk@li.org>\n"
 "Language: mk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
