--- a/doc/icewm.adoc
+++ b/doc/icewm.adoc
@@ -1039,7 +1039,14 @@ Show ACPI temperature in CPU status tool tip.
 Show ACPI temperature in CPU graph.
 
 * `AcpiIgnoreBatteries =`
-List of battery names ignore.
++
+List of battery names to ignore.
+
+* `IgnoreThermalZones =`
++
+List of thermal zone types, from /sys/class/thermal_zoneX/type to ignore.
+Useful when some thermal zones block for too long when the temp is read.
+
 * `CPUStatusShowCpuFreq = 1`
 +
 Show CPU frequency in CPU status tool tip.
