--- a/po/es.po
+++ b/po/es.po
@@ -21,9 +21,9 @@ msgstr ""
 
 #: src/aapm.cc:66
 #, fuzzy, c-format
-#| msgid "Could not open OSS device %s"
+#| msgid "Could not open APM device %s"
 msgid "Can't open the APM device %s"
-msgstr "No se puede abrir el dispositivo OSS %s"
+msgstr "No se puede abrir el dispositivo APM %s"
 
 #: src/aapm.cc:74 src/aapm.cc:92
 #, c-format
