--- a/po/hu.po
+++ b/po/hu.po
@@ -24,9 +24,9 @@ msgstr ""
 # ../src/icons.cc:220
 #: src/aapm.cc:66
 #, fuzzy, c-format
-#| msgid "Could not open OSS device %s"
+#| msgid "Could not open APM device %s"
 msgid "Can't open the APM device %s"
-msgstr "Nem sikerült megnyitni a(z) %s OSS-eszközt"
+msgstr "Nem sikerült megnyitni a(z) %s APM-eszközt"
 
 #: src/aapm.cc:74 src/aapm.cc:92
 #, c-format
