--- a/po/it.po
+++ b/po/it.po
@@ -24,9 +24,9 @@ msgstr ""
 
 #: src/aapm.cc:66
 #, fuzzy, c-format
-#| msgid "Could not open OSS device %s"
+#| msgid "Could not open APM device %s"
 msgid "Can't open the APM device %s"
-msgstr "Impossibile aprire il dispositivo OSS %s"
+msgstr "Impossibile aprire il dispositivo APM %s"
 
 #: src/aapm.cc:74 src/aapm.cc:92
 #, c-format
