--- a/po/sv.po
+++ b/po/sv.po
@@ -20,9 +20,9 @@ msgstr ""
 
 #: src/aapm.cc:66
 #, fuzzy, c-format
-#| msgid "Could not open OSS device %s"
+#| msgid "Could not open APM device %s"
 msgid "Can't open the APM device %s"
-msgstr "Kunde inte öppna OSS-enhet %s"
+msgstr "Kunde inte öppna APM-enhet %s"
 
 #: src/aapm.cc:74 src/aapm.cc:92
 #, c-format
