--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -16,9 +16,9 @@ msgstr ""
 
 #: src/aapm.cc:66
 #, fuzzy, c-format
-#| msgid "Could not open OSS device %s"
+#| msgid "Could not open APM device %s"
 msgid "Can't open the APM device %s"
-msgstr "无法打开 OSS 设备 %s"
+msgstr "无法打开 APM 设备 %s"
 
 #: src/aapm.cc:74 src/aapm.cc:92
 #, c-format
