--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -22,9 +22,9 @@ msgstr ""
 
 #: src/aapm.cc:66
 #, fuzzy, c-format
-#| msgid "Could not open OSS device %s"
+#| msgid "Could not open APM device %s"
 msgid "Can't open the APM device %s"
-msgstr "無法開啟 OSS 裝置 %s"
+msgstr "無法開啟 APM 裝置 %s"
 
 #: src/aapm.cc:74 src/aapm.cc:92
 #, c-format
