--- a/po/el.po
+++ b/po/el.po
@@ -22,9 +22,9 @@ msgstr ""
 
 #: src/aapm.cc:66
 #, fuzzy, c-format
-#| msgid "Could not open OSS device %s"
+#| msgid "Could not open APM device %s"
 msgid "Can't open the APM device %s"
-msgstr "Αδυναμία ανοίγματος της συσκευής OSS %s"
+msgstr "Αδυναμία ανοίγματος της συσκευής APM %s"
 
 #: src/aapm.cc:74 src/aapm.cc:92
 #, c-format
