--- a/po/tr.po
+++ b/po/tr.po
@@ -21,9 +21,9 @@ msgstr ""
 
 #: src/aapm.cc:66
 #, fuzzy, c-format
-#| msgid "Could not open OSS device %s"
+#| msgid "Could not open APM device %s"
 msgid "Can't open the APM device %s"
-msgstr "OSS cihazı %s açılamadı"
+msgstr "APM cihazı %s açılamadı"
 
 #: src/aapm.cc:74 src/aapm.cc:92
 #, c-format
