--- a/man/icewm-menu-fdo.pod
+++ b/man/icewm-menu-fdo.pod
@@ -6,13 +6,14 @@
 
 =head1 SYNOPSIS
 
-B<icewm-menu-fdo> [I<FILENAME>]
+B<icewm-menu-fdo> [I<OPTIONS>] [I<FILENAME>]
 
 =head1 DESCRIPTION
 
-B<icewm-menu-fdo> introduces the XDG menu descriptors (aka
-FreeDesktop.Org F<.desktop> files) to the menus of B<IceWM> window
-manager.
+B<icewm-menu-fdo> generates a menu for the B<IceWM> window manager
+from XDG menu descriptors (aka FreeDesktop.Org F<.desktop> files).
+By including this in the L<icewm-menu(1)>, the system applications
+become available in the icewm start menu.
 
 =head1 ARGUMENTS
 
@@ -20,22 +21,62 @@ manager.
 
 =item [I<FILENAME>]
 
-When provided with the optional I<FILENAME> argument that is the name
-and location of a F<.desktop> file, B<icewm-menu-fdo> will open it and
-launch the application using the C<Exec> line from the desktop file.
+The optional I<FILENAME> argument is the location of a F<.desktop> file.
+When given, B<icewm-menu-fdo> launches the application using the C<Exec>
+line from the desktop file.
 
 =back
 
 =head1 OPTIONS
 
-This program doesn't use command line options. In future, it might
-support the pass-through of arguments to the command run from F<.desktop>
-file's C<Exec> line.
+=over
+
+=item B<-g>, B<--generic>
+
+Include the generic name in parentheses in the title of B<prog> entries.
+
+=item B<--seps>
+
+Print a leading and a trailing separator.
+
+=item B<--sep-before>
+
+Print a leading separator.
+
+=item B<--sep-after>
+
+Print a trailing separator.
+
+=item B<--no-sep-others>
+
+Don't print the C<Other> category last.
+
+=item B<--no-sub-cats>
+
+Don't nest subcategories in submenus.
+
+=item B<-o>, B<--output=FILE>
+
+Write the output to I<FILE>.
+
+=item B<-h>, B<--help>
+
+Print a brief usage statement to F<stdout> and exit.
+
+=item B<-V>, B<--version>
+
+Print the program version to F<stdout> and exit.
+
+=item B<-C>, B<--copying>
+
+Print copying permissions to F<stdout> for the program and exit.
+
+=back
 
 =head1 USAGE
 
-This utility is not normally used directly, but is used as the
-executable in a B<menuprog> entry in a menu.
+This utility is not normally used directly. It is used as the
+executable in a B<menuprog> entry in a L<icewm-menu(5)>.
 
 =head1 EXAMPLES
 
