--- a/man/icewm-menu.pod
+++ b/man/icewm-menu.pod
@@ -94,8 +94,7 @@ These are literal string keywords.
 
 This is the I<title> string associated with the menu item which is
 displayed in the menu.  When the I<title> contains spaces, the title
-must be surrounded by double quotes (C<">), although the I<title> may
-always be surrounded by double quotes if preferred.
+must be surrounded by double quotes (C<>).
 
 =item I<icon>
 
