Add support for tabbed windows. Add "ignoreOverrideRedirect" winoption. Allow taskbar to hide/unhide by icesh.

--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -412,6 +412,17 @@ I<Layer>.  From there choose one of seven window layers.  These are
 ordered from higher to lower.  Windows in higher layers appear over
 windows in lower layers.
 
+=head2 TABBED WINDOWS
+
+A window frame may contain multiple client windows. To realize this,
+drag the title bar with the middle mouse button, while holding down
+a shift key, onto the title bar of another frame. The two title bars
+will start to flash to indicate that they can merge. Release the
+mouse button to merge the client of the upper window to the lower frame.
+Now the lower frame will have multiple clients, called tabs. Use the
+C<KeyWinNext=Alt+F6> and C<KeySysWinPrev=Alt+Shift+Esc> keys to select
+a tab, or use the QuickSwitch or use a submenu in the window menu.
+
 =head2 WORKSPACES
 
 B<icewm> supports multiple virtual desktops called workspaces.  A
