--- a/man/icesh.pod
+++ b/man/icesh.pod
@@ -591,6 +591,11 @@ This is either Locally, Passive, Globally or NoInput.
 Print the override redirect status for the window, or if either 0 or 1
 is given, then disable or enable the override redirect status.
 
+=item B<tabto> I<label>
+
+Move the windows as tabs to a frame which has C<frame> label I<label>.
+Such a frame is created if needed.
+
 =item B<click> I<window-x> I<window-y> I<button>
 
 Send a button press and release event at position (I<window-x>,
