Mention Alt+Tab raise candidate in the icewm manpage.

--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -371,8 +371,8 @@ in the centre of the screen with a list of windows to choose from.
 A narrow band indicates a selection: the candidate window that will
 be activated to receive input focus when the Alt key is released.
 
-The selection can be changed.  By repeatedly pressing the Tab key, one
-can cycle over all windows.  If a Shift key is down, the direction of
+The selection can be changed by repeatedly pressing the Tab key, while
+keeping the Alt key down. If a Shift key is also down, the direction of
 traversal is reversed. Or use the scroll wheel of the mouse.  Or use
 one of the digit keys to select the corresponding window from the list.
 Arrow keys are also supported, as well as the Home and End key.
@@ -387,7 +387,8 @@ workspace with the usual workspace hotkeys.
 
 The QuickSwitch has two distinct modes: vertical and horizontal.
 The window list can include all windows or be limited to the current
-workspace. See the many preferences available for the QuickSwitch.
+workspace. There is an option to raise the selected candidate.
+See the many preferences available for the QuickSwitch.
 
 =head2 WINDOW PLACEMENT
 
